adding port page with links to completed sites

--- a/portfolio.html
+++ b/portfolio.html
@@ -58,30 +58,40 @@
             <thead>
                 <tr>
                     <th scope="col-sm-12 col-md-6 col-lg-4">
+                        <a href="https://anderson0505.github.io/Psychic-Game/">
                         <img src="assets/images/placeholder.png">
-                        <p>Hangman</p>
+                        <p href="https://anderson0505.github.io/Psychic-Game/">Psychic Game</p>
+                        </a>
                     </th>
                     <th scope="col-sm-12 col-md-6 col-lg-4">
+                        <a href="https://anderson0505.github.io/unit-4-game/">
                         <img src="assets/images/placeholder.png">
-                        <p>RPG Game</p>
+                        <p>Crystal Collector</p>
+                        </a>
                     </th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
                     <th scope="col-sm-12 col-md-6 col-lg-4">
+                        <a href="https://anderson0505.github.io/GifTastic/">
                         <img src="assets/images/placeholder.png">
-                        <p>Trivia Game</p>
+                        <p>GifTastic</p>
+                        </a>
                     </th>
                     <th scope="col-sm-12 col-md-6 col-lg-4">
+                        <a href="https://stevenrobday.github.io/Project1/index.html">
                         <img src="assets/images/placeholder.png">
-                        <p>Rutgers Info Widget</p>
+                        <p>TeleAdvise</p>
+                        </a>
                     </th>
                 </tr>
                 <tr>
                     <th scope="col-sm-12 col-md-6 col-lg-4">
+                        <a href="https://anderson0505.github.io/Train-Scheduler/">
                         <img src="assets/images/placeholder.png">
-                        <p>Rock Paper Scissors</p>
+                        <p>Train Scheduler</p>
+                        </a>
                     </th>
                 </tr>
                 <tr>
