--- a/portfolio.html
+++ b/portfolio.html
@@ -59,13 +59,13 @@
                 <tr>
                     <th scope="col-sm-12 col-md-6 col-lg-4">
                         <a href="https://anderson0505.github.io/Psychic-Game/">
-                        <img src="assets/images/placeholder.png">
+                        <img class ="portPic" src="assets/images/Crystal-ball.png">
                         <p href="https://anderson0505.github.io/Psychic-Game/">Psychic Game</p>
                         </a>
                     </th>
                     <th scope="col-sm-12 col-md-6 col-lg-4">
                         <a href="https://anderson0505.github.io/unit-4-game/">
-                        <img src="assets/images/placeholder.png">
+                        <img class ="portPic" src="assets/images/crystal-coll.jpg">
                         <p>Crystal Collector</p>
                         </a>
                     </th>
@@ -75,13 +75,13 @@
                 <tr>
                     <th scope="col-sm-12 col-md-6 col-lg-4">
                         <a href="https://anderson0505.github.io/GifTastic/">
-                        <img src="assets/images/placeholder.png">
+                        <img class ="portPic" src="assets/images/giphy.png">
                         <p>GifTastic</p>
                         </a>
                     </th>
                     <th scope="col-sm-12 col-md-6 col-lg-4">
                         <a href="https://stevenrobday.github.io/Project1/index.html">
-                        <img src="assets/images/placeholder.png">
+                        <img class ="portPic" src="assets/images/TALogo.PNG">
                         <p>TeleAdvise</p>
                         </a>
                     </th>
@@ -89,12 +89,30 @@
                 <tr>
                     <th scope="col-sm-12 col-md-6 col-lg-4">
                         <a href="https://anderson0505.github.io/Train-Scheduler/">
-                        <img src="assets/images/placeholder.png">
+                        <img class ="portPic" src="assets/images/train.jpg">
                         <p>Train Scheduler</p>
+                        </a>
+                    </th>
+                    <th scope="col-sm-12 col-md-6 col-lg-4">
+                        <a href="">
+                        <img class ="portPic" src="">
+                        <p></p>
                         </a>
                     </th>
                 </tr>
                 <tr>
+                    <th scope="col-sm-12 col-md-6 col-lg-4">
+                        <a href="">
+                        <img class ="portPic" src="">
+                        <p></p>
+                        </a>
+                    </th>
+                    <th scope="col-sm-12 col-md-6 col-lg-4">
+                        <a href="">
+                        <img class ="portPic" src="">
+                        <p></p>
+                        </a>
+                    </th>
                 </tr>
             </tbody>
         </table>
